[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/actors/Cat.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/core/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/PNG/platformer_background_3/platformer_background_3.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/webpixel bitmap_regular.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="platformer_background_3" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Cat" parent="." instance=ExtResource( 1 )]
position = Vector2( 691.177, 483.815 )

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 42.4646
margin_top = 8.54676
margin_right = 127.465
margin_bottom = 40.5468
rect_scale = Vector2( 10, 10 )
custom_fonts/font = SubResource( 1 )
text = "Time: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Positions" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Positions"]
position = Vector2( 443.993, 363.267 )

[node name="Position2D2" type="Position2D" parent="Positions"]
position = Vector2( 1288.25, 538.174 )

[node name="Position2D3" type="Position2D" parent="Positions"]
position = Vector2( 494.447, 716.444 )

[node name="Position2D4" type="Position2D" parent="Positions"]
position = Vector2( 1204.16, 813.988 )
[connection signal="won" from="Cat" to="." method="_on_Cat_won"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
